# error_snippet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release-plz.yml
error_snippet_derive/: CHANGELOG.md  Cargo.toml
error_snippet_derive/src/: args.rs  diagnostic.rs  fields.rs  fmt.rs  lib.rs  tokens.rs
examples/: derive.rs  derive_source.rs  handler.rs  multiline.rs  source_slice.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_graphical.rs
src/: handler.rs  lib.rs  source.rs
src/render/: graphical.rs  mod.rs
tests/: handler.rs  tests.rs
tests/derive/: cause.rs  code.rs  help.rs  label.rs  message.rs  mod.rs  related.rs  severity.rs
tests/derive/snapshots/: tests__derive__cause__cause_with_source.snap  tests__derive__cause__multiple_causes.snap  tests__derive__cause__multiple_causes_with_source.snap  tests__derive__cause__single_cause.snap  tests__derive__cause__sourced_error_with_cause.snap  tests__derive__code__complex.snap  tests__derive__code__simple_code.snap  tests__derive__code__unformatted.snap  tests__derive__help__multiple_helps.snap  tests__derive__help__multiple_lines.snap  tests__derive__help__single_line.snap  tests__derive__label__label_fmt.snap  tests__derive__label__label_fmt_debug.snap  tests__derive__label__label_string_source.snap  tests__derive__label__labels_delayed_source.snap  tests__derive__label__multiple_labels.snap  tests__derive__label__single_label.snap  tests__derive__message__formatted_message.snap  tests__derive__message__formatted_message_debug.snap  tests__derive__message__formatted_message_debug_pretty.snap  tests__derive__message__multiple_formatted_message.snap  tests__derive__message__only_message.snap  tests__derive__related__multiple_related.snap  tests__derive__related__multiple_related_with_source.snap  tests__derive__related__related_with_source.snap  tests__derive__related__single_related.snap  tests__derive__related__sourced_error_with_related.snap  (+5 more)
tests/renderer/: graphical.rs  invalid.rs  mod.rs
(+39 files in other folders)
