[package]
name = "error_snippet"
version = "0.1.7"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
description = "Library for reporting fancy diagnostics to the console"
keywords = ["error", "diagnostics", "report", "programming-language"]
categories = [
    "command-line-utilities",
    "compilers",
    "development-tools::build-utils",
    "parsing",
    "visualization",
]
repository = "https://github.com/lume-lang/error_snippet"
license = "MIT"
readme = "README.md"
edition = "2018"
rust-version = "1.85.0"
exclude = ["examples/*.png"]

[dependencies]
error_snippet_derive = { path = "error_snippet_derive", version = "=0.1.2", optional = true }

indexmap = "=2.9.0"
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
terminal_size = { version = "0.4.2", optional = true }

[dev-dependencies]
insta = "=1.43.1"
trybuild = "=1.0.104"

[features]
default = ["derive"]
derive = ["dep:error_snippet_derive"]
termsize = ["dep:terminal_size"]

[workspace]
members = ["error_snippet_derive"]

[[example]]
name = "source_slice"
